change link in gh-page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bartlomiejmazur.github.io/SMP_Tuszymka/",
+  "homepage": "https://bartlomiejmazur.github.io/SMPTuszymka/",
   "name": "first_page",
   "version": "0.1.0",
   "private": true,
